Speed up Photon backend startup and runtime
- Move Photon runtime index to a Docker volume and sync it from host artifacts
- Add backend benchmark script and preflight checks
- Tune Photon JVM flags and update docs